--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 							<div class="inner">
 								<h1>Kuldeep Bairwa</h1>
 								<p>Android Developer works on <a href="https://html5up.net">Native Android Development</a> and <br />
-								 <a href="https://html5up.net/license">Hybrid App Development</a> </p>
+								 <a href="https://html5up.net">Native Android Development</a> </p>
 							</div>
 						</div>
 						<nav>
